# pySIPNET

./: .gitignore  .gitmodules  404.html  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
design/: index.html
docs/: design.md  index.md  installation.md  sipnet-version.md
docs/api/: index.md
docs/user-guide/: ensemble-runs.md  file-io.md  quickstart.md  reproducible-runs.md  running-a-model.md  workflows.md
examples/: tutorial.ipynb
installation/: index.html
patches/: apply_flags_patch.py
pysipnet/: __init__.py  build.py  climate.py  config.py  ensemble.py  events.py  model.py  output.py  result.py  runner.py  version.py  viz.py
pysipnet/io/: __init__.py  clim_io.py  output_reader.py  param_io.py
pysipnet/parameters/: __init__.py  base.py  v1.py
search/: search_index.json
sipnet-version/: index.html
tests/: conftest.py  test_build.py  test_climate.py  test_config.py  test_events.py  test_integration.py  test_io.py  test_parameters.py  test_viz.py
user-guide/ensemble-runs/: index.html
user-guide/file-io/: index.html
user-guide/quickstart/: index.html
user-guide/reproducible-runs/: index.html
user-guide/running-a-model/: index.html
user-guide/workflows/: index.html
