[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysipnet"
version = "0.1.0.dev0"
description = "Clean Python interface to the SIPNET land surface model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andrew Roberts", email = "agr.roberts@gmail.com" }]
keywords = ["sipnet", "land surface model", "carbon cycle", "data assimilation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pint>=0.23",
]

[project.optional-dependencies]
xarray = ["xarray>=2023.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "xarray>=2023.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pysipnet"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["N803", "N806"]  # allow camelCase for SIPNET parameter name mappings

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires compiled SIPNET binary",
    "slow: takes more than a few seconds",
]
